Fixed Bug #69874 : Can't set empty additional_headers for mail()