ext/standard/mail.c
@@ -320,7 +320,7 @@ PHPAPI int php_mail(char *to, char *subject, char *message, char *headers, char 
 		efree(f);
 	}
 
-	if (hdr && php_mail_detect_multiple_crlf(hdr)) {
+	if (hdr && strlen(hdr) && php_mail_detect_multiple_crlf(hdr)) {
 		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Multiple or malformed newlines found in additional_header");
 		MAIL_RET(0);
 	}
